# chess_api

./: Dockerfile  README.md  bitbucket-pipelines.yml  dockerinfo.txt  pyproject.toml  requirements.txt
app/: crud.py  database.py  db.py  main.py  models.py  models2.py  schemas.py
app/routers/: chess_event.py  item.py
app/services/: chess_event_service.py  item_service.py
tests/: test_chess_event_api.py  test_json_response.py
