[tool.poetry]
name = "fide"
version = "0.1.0"
description = "API to explain chess calendar events"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.110.1"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlacodegen = "^2.3.0"
psycopg2 = "^2.9.9"
pydantic = "^2.7.0"
databases = "^0.9.0"
pytest = "^8.1.1"
requests = "^2.31.0"
pytest-mock = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
